backend/src/tests/fixtures/photos/negative/photoMinLength.fixture.ts
export default {
  caption: '1',
  equipment: {
    camera: '1',
    lens: '1',
  },
  location: '1',
  settings: {
    aperture: '1',
    focalLength: '1',
    iso: '1',
    shutterSpeed: '1',
  },
  title: '1',
};
